--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         </section>
         
         <section id="news">
-            <h2>Últimas Noticias</h2>
+            <h2>Participación del Liceo Felix Samaniego en el Festival de la ciencia 2024</h2>
             <article>
-                <h3>Título de la Noticia 1</h3>
+                <h3>Un cuento llamado ciencia y tecnología</h3>
                 <p>
-                    Resumen breve de la noticia 1. Continúa leyendo para conocer más detalles sobre este evento.
+                    Aquí encontrarás un cuento que recoge nuestra participación en el festival de la ciencia, tecnología e innovación.
                 </p>
                <a href="Noticias/new1.html"><button>Leer más</button></a> 
             </article>
