--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p>
                     Aquí encontrarás un cuento que recoge nuestra participación en el festival de la ciencia, tecnología e innovación.
                 </p>
-               <a href="Documento A4 página de libro de cuento para niños bonito infantil blanco.pdf"><button>Leer más</button></a> 
+               <a href="cuento.pdf" download><button>Leer más</button></a> 
             </article>
             <article>
                 <h3>Título de la Noticia 2</h3>
